menu page meal alignmnt issue

--- a/web/css/menu.css
+++ b/web/css/menu.css
@@ -397,8 +397,8 @@ hr.mealList-hr {
     word-wrap: break-word;
     display: inline-block;
     overflow: hidden;
-    width: 100%;
-    /*white-space: nowrap;*/
+    width: 349px;
+    white-space: nowrap;
     text-overflow: ellipsis;
     line-height: 20px;
 }
@@ -489,6 +489,7 @@ span.per-serving-text {
         width: 49%;
         margin: 0 0 60px 2%;
         float: left;
+        overflow: hidden;
     }
     .listContainer div:nth-child(2n+1) {
         margin-left: 0;
@@ -514,6 +515,9 @@ span.per-serving-text {
     }
     .listItemDetails{
         padding-right: 2%;
+    }
+    .menuItemName{
+        width: 338px;
     }
 
 }
